[gd_scene load_steps=5 format=3 uid="uid://fbf74j6q1vxe"]

[ext_resource type="Script" path="res://Scripts/one_time_spawner.gd" id="1_jxx34"]
[ext_resource type="Texture2D" uid="uid://e71fmhrg56pq" path="res://Art/static_assets.png" id="2_2elgq"]
[ext_resource type="PackedScene" uid="uid://c2vcuyjskshye" path="res://Scenes/light_big.tscn" id="3_hdxh6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jvq58"]
radius = 469.001

[node name="OneTimeSpawner" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_jxx34")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -57)
shape = SubResource("CircleShape2D_jvq58")

[node name="NotSpawning" type="Sprite2D" parent="."]
position = Vector2(1, -33)
texture = ExtResource("2_2elgq")
region_enabled = true
region_rect = Rect2(319, 60, 65, 68)

[node name="Timer" type="Timer" parent="."]

[node name="Spawning" type="Sprite2D" parent="."]
position = Vector2(0, -65)
texture = ExtResource("2_2elgq")
region_enabled = true
region_rect = Rect2(251, 0, 76, 128)

[node name="PointLight2D" parent="." instance=ExtResource("3_hdxh6")]
position = Vector2(-3, -42)

[node name="Enemies" type="Node" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
